# JobShop

./: .gitignore  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Dev.md  Job shop scheduling data_J10M3_2019.11.05.xlsx  Main  Makefile  Untitled.ipynb  arg.cpp  arg.h  chromosome.cpp  chromosome.h  cmake_install.cmake  config.txt  configure.cpp  configure.h  cuChromosome.cpp  cuChromosome.h  cuJob.cpp  cuJob.h  cuMachine.cpp  cuMachine.h  cumain.cu  def.h  gantt.cpp  gantt.h  job.cpp  job.h  job_base.cpp  job_base.h  m.py  machine.cpp  machine.h  machine.txt  main.cpp  outputFile.txt  plot.py  schedulingFormat.xml  setup_time_job.cpp  (+5 more)
lab/: :  main.cu  test.c  testStruct.cu  test_2D_array.cpp  test_2D_array.cu
semiconductor-scheduling-data/: EQP_RECIPE.txt  Setup_time.txt  Tool.txt  WIP.txt  demo.ipynb  semiconductor_data.xlsx  ~$semiconductor_data.xlsx  半導體排程資料解釋_2020.09.05.pptx
tests/: main.cpp  test_file  test_file_system.cpp  test_machine.cpp
